<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusAssist</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="zhengli">整理新装</string>
    <string name="dida">抵达目的地</string>
    <string name="ruxiao">入校第一站</string>
    <string name="woshi">我是一个兵</string>
    <string name="shenghuo">生活万花筒</string>
    <string name="jiejiao">结交新朋友</string>
    <string name="qinlian">勤练有补助</string>
    <string name="xuezhang">学长学姐寄语</string>
    
     <!-- 号码百事通模块相关字符串常量 -->
    <string name="numAssist">号码百事通</string>
    <string name="addPhone">添加新号码</string>
    <string name="exit">退出</string> 
    <string name="name">姓名</string> 
    <string name="phone">联系电话</string>
    <string name="type">分类</string>
    <string name="keyword">关键字</string>
    <string name="submit">提交</string> 
    <string name="reset">重置</string>
    <string name="hint">请输入姓名或号码</string>
    <string name="query">搜索</string>
    <string name="result">查询结果</string>
    <string name="trafficAssist">出行指南</string>

</resources>